# pookie

./: .gitignore  LICENSE  README.md
backend/pookie-backend/: .env.example  Dockerfile  README.md  benchmark_vector_search.py  egg.sh  pyproject.toml  test_integration.py
backend/pookie-backend/alembic/: env.py
backend/pookie-backend/alembic/versions/: 05adc5953209_add_trigger_to_sync_auth_users_to_users_.py  28977c402797_fix_intention_status_to_use_enum_type.py  4ea9922607f3_fix_circles_care_frequency_to_use_.py  6ad9dc72cf08_add_server_defaults_to_somethings_table.py  80625ba7815f_add_centroid_embedding_to_circles.py  8f33b4d7c4dd_initial_schema_users_thoughts_circles_.py
backend/pookie-backend/app/: main.py
backend/pookie-backend/app/core/: config.py  database.py  events.py  security.py
backend/pookie-backend/app/ml/: vector_index.py
backend/pookie-backend/app/models/: __init__.py  action.py  action_intention.py  circle.py  intention.py  intention_care.py  something.py  something_circle.py  story.py  story_action.py  user.py
backend/pookie-backend/app/schemas/: __init__.py  action.py  chat.py  intention.py  (+2 more)
backend/pookie-backend/tests/: conftest.py  test_action_endpoints.py  test_centroid_service.py  test_chat_api.py  test_circles_api_integration.py  test_embedding_service.py  test_hierarchy_e2e.py  test_hybrid_rag_scoring.py  test_intention_endpoints.py  test_llm_service.py  test_models.py  test_personalized_retrieval_service.py  test_rl_learning_loop.py  test_schemas_intention.py  test_schemas_something.py  test_security.py  test_somethings_api.py  test_vector_index.py  test_vector_service.py
(+86 files in other folders)
