[tool.poetry]
name = "pookie-backend"
version = "0.1.0"
description = "Pookie Backend - ML-optimized FastAPI backend for thought capture and semantic organization"
authors = ["sudy"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.100.0"
uvicorn = "0.20.0"
pydantic = ">=2.0"
requests = "^2.22.0"
httpx = ">=0.26,<0.29"
loguru = "^0.6.0"
joblib = "^1.2.0"
alembic = "^1.17.2"
sqlalchemy = "^2.0.44"
psycopg2-binary = "^2.9.11"
pydantic-settings = "^2.12.0"
supabase = "^2.25.0"
sentence-transformers = "^2.2.2"
torch = "^2.0.0"
numpy = "^1.24.0"
faiss-cpu = "^1.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-asyncio = "^0.21.0"
black = {version = "^19.10b0", allow-prereleases = true}
autopep8 = "^2.0.0"
ipdb = "^0.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
